fixed events overflow

--- a/src/components/event-list/event-list.styles.scss
+++ b/src/components/event-list/event-list.styles.scss
@@ -4,10 +4,10 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 100vw;
+    width: 100%;
     gap:10px;
 }
 .preview-images{
     display: flex;
-    
+
 }
